--- a/index.html
+++ b/index.html
@@ -3,65 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lava Jato do Rei | Sobradinho DF</title>
+    <title>Lava Jato do Rei | Resultados Impecáveis</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-        body { font-family: 'Inter', sans-serif; background-color: #0a0a0a; color: white; scroll-behavior: smooth; }
+        body { font-family: 'Inter', sans-serif; background-color: #050505; color: white; scroll-behavior: smooth; }
         .text-gold { background: linear-gradient(135deg, #bf953f, #fcf6ba, #aa771c); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         .gold-bg { background: linear-gradient(135deg, #bf953f, #fcf6ba, #aa771c); }
+        .border-gold { border-image: linear-gradient(135deg, #bf953f, #aa771c) 1; }
     </style>
 </head>
 <body>
-    <nav class="p-5 flex justify-between items-center border-b border-zinc-800 bg-black/90 backdrop-blur-md sticky top-0 z-50">
-        <div class="font-black text-xl italic uppercase tracking-tighter">
-            👑 LAVA JATO <span class="text-yellow-500">DO REI</span>
+
+    <nav class="p-5 flex justify-between items-center border-b border-zinc-900 bg-black/95 sticky top-0 z-50">
+        <div class="font-black text-xl italic tracking-tighter uppercase">👑 LAVA JATO <span class="text-yellow-600">DO REI</span></div>
+        <div class="hidden md:flex gap-8 text-[10px] font-bold uppercase tracking-[3px] text-zinc-400">
+            <a href="#historia" class="hover:text-yellow-500 transition">História</a>
+            <a href="#resultados" class="hover:text-yellow-500 transition text-yellow-500">Resultados</a>
         </div>
-        <a href="https://wa.me/5561981704587" target="_blank" class="gold-bg text-black px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest hover:scale-105 transition">Agendar Agora</a>
+        <a href="https://wa.me/5561981704587" class="gold-bg text-black px-5 py-2 rounded-full font-bold text-[10px] uppercase">Falar com o Rei</a>
     </nav>
 
-    <header class="py-24 px-6 text-center bg-gradient-to-b from-zinc-900 to-black">
-        <h1 class="text-6xl md:text-8xl font-black mb-6 italic tracking-tighter uppercase leading-none">
-            BRILHO REAL EM <br><span class="text-gold">SOBRADINHO</span>
-        </h1>
-        <p class="text-gray-400 text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed">
-            Localizado na <strong>Quadra 14</strong>, atrás do Sobradinho Shopping. Onde seu carro recebe tratamento de realeza.
-        </p>
-        <a href="https://wa.me/5561981704587" target="_blank" class="inline-block gold-bg text-black font-black py-5 px-14 rounded-2xl text-xl hover:shadow-[0_0_40px_rgba(191,149,63,0.5)] transition-all uppercase italic">Falar com o Rei</a>
+    <header class="py-20 px-6 text-center">
+        <h1 class="text-5xl md:text-8xl font-black mb-4 uppercase italic tracking-tighter italic">Resultados que <span class="text-gold">Impressionam</span></h1>
+        <p class="text-zinc-500 max-w-xl mx-auto text-lg mb-8 italic">O padrão de brilho que Sobradinho só encontra na Quadra 14.</p>
     </header>
 
-    <section class="py-24 px-6 max-w-6xl mx-auto border-y border-zinc-900">
-        <div class="grid md:grid-cols-2 gap-16 items-center">
-            <div class="relative group">
-                <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&q=80&w=800" alt="Lava Jato" class="rounded-3xl border border-zinc-800 shadow-2xl grayscale group-hover:grayscale-0 transition duration-700">
+    <section id="resultados" class="py-16 px-6 bg-zinc-900/50">
+        <div class="max-w-4xl mx-auto text-center border-2 border-dashed border-yellow-700/30 p-10 rounded-3xl">
+            <i class="fa-solid fa-star text-yellow-500 text-4xl mb-6"></i>
+            <h2 class="text-3xl font-black uppercase italic mb-4">Compromisso com o Resultado</h2>
+            <p class="text-xl text-gray-300 italic leading-relaxed">
+                "Não postamos apenas fotos, entregamos **perfeição**. Nosso maior resultado é o reflexo no seu capô e o sorriso no seu rosto ao buscar seu veículo."
+            </p>
+            <div class="mt-8 flex justify-center items-center gap-4 text-yellow-600 font-bold uppercase tracking-widest text-xs">
+                <span class="w-12 h-[1px] bg-yellow-600/30"></span>
+                Qualidade Máxima Garantida
+                <span class="w-12 h-[1px] bg-yellow-600/30"></span>
             </div>
-            <div>
-                <h2 class="text-4xl font-black mb-6 uppercase italic text-yellow-500 tracking-tight">Tradição na Quadra 14</h2>
-                <p class="text-gray-300 text-xl leading-relaxed mb-6 font-light">
-                    Nossa história começou aqui em Sobradinho. Não apenas limpamos veículos; nós entregamos <strong>felicidade e renovação</strong>.
-                </p>
-                <p class="text-gray-400 text-lg leading-relaxed mb-8 italic">
-                    "Ver o brilho no carro e a satisfação no rosto de cada cliente ao sair da nossa garagem é o que nos move todos os dias."
-                </p>
-                <div class="bg-zinc-900 p-6 rounded-2xl border-l-4 border-yellow-600">
-                    <p class="text-white font-bold">📍 Localização Premium:</p>
-                    <p class="text-gray-400 text-sm">Quadra 14, Atrás do Sobradinho Shopping.</p>
+        </div>
+    </section>
+
+    <section id="historia" class="py-20 px-6">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-2xl font-black mb-10 uppercase tracking-widest text-zinc-500 italic">Nossa Trajetória</h2>
+            <div class="space-y-12 border-l border-zinc-800 pl-8 ml-2">
+                <div>
+                    <h3 class="text-lg font-bold text-yellow-500 uppercase">O Legado na Quadra 14</h3>
+                    <p class="text-zinc-400 mt-2">Nascido da paixão por carros, o Lava Jato do Rei se tornou o refúgio dos motoristas exigentes de Sobradinho. Localizado estrategicamente atrás do Shopping, unimos tradição e as melhores técnicas de limpeza.</p>
+                </div>
+                <div>
+                    <h3 class="text-lg font-bold text-yellow-500 uppercase">Tratamento Real</h3>
+                    <p class="text-zinc-400 mt-2">Cada veículo é único. Nossa trajetória é marcada pelo cuidado artesanal, desde carros populares até máquinas de luxo, garantindo que todos saiam com brilho de novo.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="py-20 px-6 text-center">
-        <div class="flex justify-center gap-12 text-5xl mb-12 text-zinc-500">
-            <a href="https://wa.me/5561981704587" target="_blank" class="hover:text-green-500 transition"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#" target="_blank" class="hover:text-yellow-500 transition"><i class="fa-brands fa-instagram"></i></a>
+    <section class="py-20 px-6 max-w-7xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+            <div class="group relative overflow-hidden rounded-2xl">
+                <img src="https://images.unsplash.com/photo-1552930294-6b595f4c2974?q=80&w=800" class="w-full h-80 object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                <div class="absolute bottom-0 left-0 p-6 bg-gradient-to-t from-black to-transparent w-full">
+                    <p class="text-[10px] font-bold uppercase tracking-widest text-yellow-500">Foco no Detalhe</p>
+                </div>
+            </div>
+            <div class="group relative overflow-hidden rounded-2xl">
+                <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?q=80&w=800" class="w-full h-80 object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                <div class="absolute bottom-0 left-0 p-6 bg-gradient-to-t from-black to-transparent w-full">
+                    <p class="text-[10px] font-bold uppercase tracking-widest text-yellow-500">Limpeza Técnica</p>
+                </div>
+            </div>
+            <div class="group relative overflow-hidden rounded-2xl">
+                <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?q=80&w=800" class="w-full h-80 object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                <div class="absolute bottom-0 left-0 p-6 bg-gradient-to-t from-black to-transparent w-full">
+                    <p class="text-[10px] font-bold uppercase tracking-widest text-yellow-500">Brilho de Salão</p>
+                </div>
+            </div>
         </div>
-        <p class="text-zinc-700 text-xs font-bold uppercase tracking-widest">© 2025 LAVA JATO DO REI. EXCELÊNCIA EM CADA DETALHE.</p>
+    </section>
+
+    <footer class="py-20 text-center border-t border-zinc-900">
+        <div class="mb-8">
+            <p class="text-zinc-500 text-xs font-bold uppercase tracking-[10px]">Sobradinho DF</p>
+        </div>
+        <a href="https://wa.me/5561981704587" class="gold-bg text-black font-black py-4 px-12 rounded-full uppercase italic hover:scale-110 transition inline-block">Agendar com o Rei</a>
     </footer>
 
-    <a href="https://wa.me/5561981704587" target="_blank" class="fixed bottom-8 right-8 bg-green-600 p-5 rounded-full shadow-[0_0_20px_rgba(22,163,74,0.5)] hover:scale-110 transition z-50">
+    <a href="https://wa.me/5561981704587" class="fixed bottom-8 right-8 bg-green-600 p-5 rounded-full shadow-[0_0_30px_rgba(22,163,74,0.4)] hover:scale-110 transition z-50">
         <i class="fa-brands fa-whatsapp text-4xl text-white"></i>
     </a>
+
 </body>
 </html>
