Site dourado com resultados e falar com o rei

--- a/index.html
+++ b/index.html
@@ -11,83 +11,72 @@
         body { font-family: 'Inter', sans-serif; background-color: #000; color: #fff; }
         .gold-text { color: #bf953f; }
         .gold-bg { background: linear-gradient(135deg, #bf953f, #fcf6ba, #aa771c); }
-        .insta-btn { background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
-        .card-img { height: 250px; object-fit: cover; width: 100%; border-radius: 20px; }
+        .gold-border { border: 2px solid #bf953f; }
+        .card-img { height: 250px; object-fit: cover; width: 100%; border-radius: 20px; border: 1px solid #333; }
     </style>
 </head>
 <body class="bg-black">
 
     <nav class="p-5 border-b border-zinc-900 flex justify-between items-center bg-black/95 sticky top-0 z-50">
         <div class="font-black italic text-xl uppercase tracking-tighter">👑 LAVA JATO <span class="gold-text">DO REI</span></div>
-        <div class="flex gap-4">
-            <a href="https://www.instagram.com/lavajatodurei/" target="_blank" class="text-xl hover:text-pink-500 transition"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/5561981704587" class="gold-bg text-black px-4 py-1 rounded-full font-black uppercase text-[10px]">Agendar</a>
-        </div>
+        <a href="https://wa.me/5561981704587" class="gold-bg text-black px-5 py-2 rounded-full font-black uppercase text-[10px] hover:scale-105 transition">Falar com o Rei</a>
     </nav>
 
     <header class="py-20 px-6 text-center border-b border-zinc-900 bg-zinc-950">
-        <h1 class="text-5xl md:text-8xl font-black uppercase italic mb-4 leading-tight">AQUI SEU CARRO <br><span class="gold-text">SAI UM REI</span></h1>
-        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold">Todo limpo, bonito e pronto para o desfile!</p>
+        <h1 class="text-5xl md:text-8xl font-black uppercase italic mb-4 leading-tight">AQUI SEU CARRO <br><span class="gold-text text-6xl md:text-9xl">SAI UM REI</span></h1>
+        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold">O <span class="gold-text">BRILHO DO REI</span> QUE SOBRADINHO CONHECE!</p>
     </header>
 
     <section class="py-16 px-6 max-w-6xl mx-auto">
-        <h2 class="text-2xl font-black uppercase mb-10 text-center italic">Nosso Padrão de <span class="gold-text">Excelência</span></h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="space-y-2">
-                <img src="https://images.unsplash.com/photo-1552930294-6b595f4c2974?auto=format&fit=crop&w=600&q=80" alt="Lavagem" class="card-img shadow-2xl border border-zinc-800">
-                <p class="text-center text-xs font-bold uppercase gold-text">Banho Real (Espuma Ativa)</p>
+        <h2 class="text-2xl font-black uppercase mb-10 text-center italic">Cuidado <span class="gold-text">Manual e Profissional</span></h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="space-y-3">
+                <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=600&q=80" class="card-img">
+                <p class="text-center text-xs font-black uppercase gold-text italic">Tratamento de Realeza</p>
             </div>
-            <div class="space-y-2">
-                <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?auto=format&fit=crop&w=600&q=80" alt="Detalhamento" class="card-img shadow-2xl border border-zinc-800">
-                <p class="text-center text-xs font-bold uppercase gold-text">Brilho que Cega a Concorrência</p>
+            <div class="space-y-3">
+                <img src="https://images.unsplash.com/photo-1605610849440-e4a5e1e3b82d?auto=format&fit=crop&w=600&q=80" class="card-img">
+                <p class="text-center text-xs font-black uppercase gold-text italic">Mão na massa e Brilho no balde</p>
             </div>
-            <div class="space-y-2">
-                <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?auto=format&fit=crop&w=600&q=80" alt="Interior" class="card-img shadow-2xl border border-zinc-800">
-                <p class="text-center text-xs font-bold uppercase gold-text">Interior de Palácio</p>
+            <div class="space-y-3">
+                <img src="https://images.unsplash.com/photo-1552930294-6b595f4c2974?auto=format&fit=crop&w=600&q=80" class="card-img">
+                <p class="text-center text-xs font-black uppercase gold-text italic">Detalhes que impressionam</p>
             </div>
         </div>
     </section>
 
-    <section class="py-20 px-6 bg-zinc-950">
+    <section class="py-16 px-6 bg-zinc-950">
         <div class="max-w-4xl mx-auto">
-            <h2 class="text-3xl font-black gold-text uppercase mb-8 italic">Uma História de Tradição e Visão</h2>
+            <h2 class="text-3xl font-black gold-text uppercase mb-8 italic">Uma História de Tradição</h2>
             <div class="space-y-6 text-zinc-400 text-lg leading-relaxed italic">
-                <p>
-                    Desde que os primeiros automóveis surgiram, a necessidade de mantê-los impecáveis sempre foi uma questão de honra. O **Lava Jato do Rei** não nasceu apenas para lavar carros, mas para coroar o seu patrimônio com o cuidado que ele merece.
-                </p>
+                <p>O <strong>Lava Jato do Rei</strong> não nasceu apenas para lavar carros, mas para coroar o seu patrimônio. Nossa história na <strong>Quadra 14</strong> é baseada em estratégia e respeito ao seu tempo.</p>
                 <p class="text-white border-l-4 border-yellow-600 pl-6 bg-zinc-900 p-6 rounded-r-xl">
-                    <strong>A Estratégia da Quadra 14:</strong> Sabíamos que no coração de Sobradinho, o tempo é ouro. Por isso, criamos o nosso "trono" estrategicamente **atrás do Sobradinho Shopping e ao lado das principais escolas**. 
+                    Estamos localizados estrategicamente <strong>atrás do Sobradinho Shopping e ao lado das principais escolas</strong>. Deixe seu carro conosco, resolva sua vida no centro do bairro, e volte para buscar sua máquina impecável.
                 </p>
-                <p>
-                    A ideia foi simples: conveniência real. Você deixa seu carro com a nossa "guarda real", vai resolver suas compras, toma um café no shopping ou busca os filhos na escola. Quando você volta, o seu carro não está apenas limpo... ele está majestoso! Unimos o centro comercial ao centro da estética automotiva.
-                </p>
-                <p class="text-center text-2xl font-black gold-text py-10">
-                    "Aqui a sujeira perde a coroa e seu carro ganha o reino!"
-                </p>
+                <p class="text-center text-2xl font-black gold-text py-6 italic">"Aqui a sujeira perde a coroa e seu carro ganha o reino!"</p>
             </div>
         </div>
     </section>
 
     <section class="py-20 px-6 text-center">
-        <div class="max-w-xl mx-auto border border-zinc-800 p-12 rounded-[50px] bg-zinc-900/30">
-            <i class="fa-brands fa-instagram text-6xl mb-6"></i>
-            <h2 class="text-3xl font-black mb-6 uppercase italic">Veja as <span class="gold-text">Transformações</span></h2>
-            <p class="text-zinc-500 mb-8 italic">Nosso feed é o verdadeiro desfile da realeza na Quadra 14.</p>
-            <a href="https://www.instagram.com/lavajatodurei/" target="_blank" class="insta-btn text-white px-10 py-5 rounded-2xl font-black uppercase tracking-widest hover:scale-105 transition block">
-                Abrir Instagram @lavajatodurei
+        <div class="max-w-xl mx-auto border-2 border-yellow-600 p-12 rounded-[50px] bg-zinc-900/30">
+            <i class="fa-brands fa-instagram text-6xl mb-6 gold-text"></i>
+            <h2 class="text-4xl font-black mb-6 uppercase italic gold-text tracking-tighter">RESULTADOS</h2>
+            <p class="text-zinc-400 mb-8 italic">Confira as transformações reais em nosso Instagram oficial.</p>
+            <a href="https://www.instagram.com/lavajatodurei/" target="_blank" class="gold-bg text-black px-12 py-5 rounded-2xl font-black uppercase tracking-widest hover:scale-105 transition block text-xl shadow-[0_0_20px_rgba(191,149,63,0.4)]">
+                VER RESULTADOS
             </a>
         </div>
     </section>
 
     <footer class="py-16 text-center border-t border-zinc-900">
-        <p class="text-zinc-500 text-[10px] font-bold uppercase tracking-[10px] mb-4">Quadra 14 | Atrás do Shopping | Sobradinho DF</p>
-        <div class="flex justify-center gap-6">
-            <a href="https://wa.me/5561981704587" class="text-zinc-400 hover:text-green-500"><i class="fa-brands fa-whatsapp text-2xl"></i></a>
-            <a href="https://www.instagram.com/lavajatodurei/" class="text-zinc-400 hover:text-pink-500"><i class="fa-brands fa-instagram text-2xl"></i></a>
-        </div>
+        <p class="text-zinc-500 text-[10px] font-bold uppercase tracking-[10px] mb-8">Quadra 14 | Sobradinho DF</p>
+        <a href="https://wa.me/5561981704587" target="_blank" class="gold-text border-2 border-yellow-600 px-8 py-3 rounded-full font-black uppercase hover:bg-yellow-600 hover:text-black transition">
+            <i class="fa-brands fa-whatsapp mr-2"></i> FALAR COM O REI
+        </a>
     </footer>
 
-    <a href="https://wa.me/5561981704587" class="fixed bottom-6 right-6 bg-green-600 p-5 rounded-full shadow-2xl z-50 hover:scale-110 transition">
+    <a href="https://wa.me/5561981704587" class="fixed bottom-6 right-6 gold-bg text-black p-5 rounded-full shadow-2xl z-50 hover:scale-110 transition">
         <i class="fa-brands fa-whatsapp text-4xl"></i>
     </a>
 
