correcao de fotos e historia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lava Jato do Rei | História e Tradição</title>
+    <title>Lava Jato do Rei | O Brilho da Realeza</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -11,8 +11,14 @@
         body { font-family: 'Inter', sans-serif; background-color: #000; color: #fff; }
         .gold-text { color: #bf953f; }
         .gold-bg { background: linear-gradient(135deg, #bf953f, #fcf6ba, #aa771c); }
-        .bw-photo { filter: grayscale(100%); transition: all 0.6s ease; cursor: pointer; }
-        .bw-photo:hover { filter: grayscale(0%); transform: scale(1.05); }
+        .bw-photo { 
+            filter: grayscale(100%); 
+            transition: all 0.6s ease; 
+            cursor: pointer; 
+            object-fit: cover;
+            border: 1px solid #333;
+        }
+        .bw-photo:hover { filter: grayscale(0%); transform: scale(1.03); border-color: #bf953f; }
     </style>
 </head>
 <body class="bg-black">
@@ -28,47 +34,34 @@
     </header>
 
     <section class="py-12 px-6 max-w-6xl mx-auto">
-        <p class="text-center text-zinc-600 mb-8 uppercase text-[10px] tracking-[5px]">Passe o mouse para ver o brilho real</p>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <img src="https://images.unsplash.com/photo-1601362840469-51e4d8d59085?auto=format&fit=crop&w=800&q=80" class="bw-photo rounded-3xl border border-zinc-800 h-64 w-full object-cover shadow-2xl">
-            <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800&q=80" class="bw-photo rounded-3xl border border-zinc-800 h-64 w-full object-cover shadow-2xl">
-            <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?auto=format&fit=crop&w=800&q=80" class="bw-photo rounded-3xl border border-zinc-800 h-64 w-full object-cover shadow-2xl">
+            <img src="https://images.pexels.com/photos/3311574/pexels-photo-3311574.jpeg?auto=compress&cs=tinysrgb&w=800" class="bw-photo rounded-3xl h-64 w-full shadow-2xl" alt="Carro Luxo">
+            <img src="https://images.pexels.com/photos/372810/pexels-photo-372810.jpeg?auto=compress&cs=tinysrgb&w=800" class="bw-photo rounded-3xl h-64 w-full shadow-2xl" alt="Lavagem">
+            <img src="https://images.pexels.com/photos/979503/pexels-photo-979503.jpeg?auto=compress&cs=tinysrgb&w=800" class="bw-photo rounded-3xl h-64 w-full shadow-2xl" alt="Estética">
         </div>
     </section>
 
     <section class="py-20 px-6 bg-zinc-950 border-y border-zinc-900">
-        <div class="max-w-4xl mx-auto space-y-16">
+        <div class="max-w-4xl mx-auto space-y-12">
+            <h2 class="text-3xl font-black gold-text uppercase mb-10 italic text-center">A Evolução do Cuidado Automotivo</h2>
             
-            <div class="text-center">
-                <h2 class="text-4xl font-black gold-text uppercase mb-4 italic">A Jornada da Estética Automotiva</h2>
-                <p class="text-zinc-500 italic">Uma história de um século que encontrou sua coroa em Sobradinho</p>
-            </div>
+            <div class="space-y-10 text-zinc-400 leading-relaxed text-lg italic">
+                <p>A história dos lava-jatos começa nos EUA em 1914 com métodos manuais (balde e sabão) e evolui para máquinas automáticas nos anos 60 com túneis e esteiras, popularizando-se globalmente com inovações como lavagem sem escovas e tecnologias ecológicas.</p>
 
-            <div class="space-y-12 text-zinc-400 leading-relaxed text-lg">
-                
-                <div>
-                    <h3 class="text-white font-bold text-xl mb-4 border-l-4 border-yellow-600 pl-4 uppercase">Início do Século XX (1914)</h3>
-                    <p class="italic">O pioneirismo surgiu nos EUA com o primeiro "lava-car" utilizando baldes e sabão. O que começou como um cuidado rudimentar, tornou-se a base de uma indústria bilionária conforme a frota mundial crescia.</p>
+                <div class="grid md:grid-cols-2 gap-8 text-sm">
+                    <div class="border-l-2 border-yellow-600 pl-4">
+                        <strong class="text-white block mb-2 uppercase">Primórdios</strong>
+                        O primeiro "lava-car" surgiu em 1914. Com o aumento dos carros, a demanda cresceu, impulsionando a indústria.
+                    </div>
+                    <div class="border-l-2 border-yellow-600 pl-4">
+                        <strong class="text-white block mb-2 uppercase">Anos 60</strong>
+                        A automatização trouxe túneis e escovas giratórias, transformando o lava-rápido em uma potência global.
+                    </div>
                 </div>
 
-                <div>
-                    <h3 class="text-white font-bold text-xl mb-4 border-l-4 border-yellow-600 pl-4 uppercase">A Revolução dos Anos 60</h3>
-                    <p class="italic">Surgiram os sistemas mecanizados: túneis, escovas giratórias e esteiras rolantes. A automação transformou a lavagem em um processo global, focando em velocidade e escala industrial.</p>
-                </div>
-
-                <div>
-                    <h3 class="text-white font-bold text-xl mb-4 border-l-4 border-yellow-600 pl-4 uppercase">Tecnologia e Sustentabilidade</h3>
-                    <p class="italic">Hoje, a estética automotiva evoluiu para o detalhamento técnico. Com técnicas de lavagem a seco, reuso de água e polimento de alta precisão, o serviço deixou de ser apenas limpeza e tornou-se uma arte de conservação.</p>
-                </div>
-
-                <div class="bg-zinc-900 p-8 rounded-3xl border-2 border-yellow-900/30 shadow-2xl">
-                    <h3 class="gold-text font-black text-2xl mb-4 uppercase italic">Tradição na Quadra 14</h3>
-                    <p class="text-white italic mb-6">
-                        No Brasil, o cenário de estética automotiva amadureceu com foco em sustentabilidade. O **Lava Jato do Rei** traz essa excelência para a **Quadra 14 de Sobradinho**.
-                    </p>
-                    <p class="text-zinc-300 italic">
-                        Localizados estrategicamente **atrás do Sobradinho Shopping e ao lado das principais escolas**, oferecemos a conveniência que a vida moderna exige. Enquanto você resolve sua rotina no centro do bairro, nós aplicamos o Brilho do Rei no seu veículo.
-                    </p>
+                <div class="bg-zinc-900 p-8 rounded-3xl border border-zinc-800">
+                    <h3 class="gold-text font-black text-xl mb-4 uppercase">Chegada na Quadra 14</h3>
+                    <p class="text-zinc-300">Hoje, a estética automotiva é uma arte. O **Lava Jato do Rei** traz essa especialização para o centro de Sobradinho. Localizados **atrás do Shopping e ao lado das escolas**, oferecemos a conveniência de um serviço de elite no coração do seu dia a dia.</p>
                 </div>
             </div>
         </div>
@@ -76,13 +69,13 @@
 
     <section class="py-24 px-6 text-center">
         <h2 class="text-4xl font-black mb-8 uppercase italic gold-text">RESULTADOS</h2>
-        <a href="https://www.instagram.com/lavajatodurei/" target="_blank" class="gold-bg text-black px-12 py-5 rounded-2xl font-black uppercase tracking-widest hover:scale-110 transition inline-block text-xl shadow-[0_10px_40px_rgba(191,149,63,0.3)]">
-            VER NO INSTAGRAM
+        <a href="https://www.instagram.com/lavajatodurei/" target="_blank" class="gold-bg text-black px-12 py-5 rounded-2xl font-black uppercase tracking-widest hover:scale-110 transition inline-block text-xl shadow-2xl">
+            Instagram Oficial
         </a>
     </section>
 
     <footer class="py-10 text-center opacity-30">
-        <p class="text-[10px] font-bold uppercase tracking-[10px]">Quadra 14 | Sobradinho DF</p>
+        <p class="text-[10px] font-bold uppercase tracking-[10px]">Sobradinho DF | Quadra 14</p>
     </footer>
 
     <a href="https://wa.me/5561981704587" class="fixed bottom-6 right-6 gold-bg text-black p-5 rounded-full shadow-2xl z-50 transition hover:scale-110">
